--- a/0-Python Basics.ipynb
+++ b/0-Python Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6dcb8448",
+   "id": "55494f9e",
    "metadata": {},
    "source": [
     "# Intro to python\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee69bd3",
+   "id": "5bc6ab33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2583100d",
+   "id": "a8448c34",
    "metadata": {},
    "source": [
     "## Lists \n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c138fb29",
+   "id": "45174193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b4976f",
+   "id": "cf06c103",
    "metadata": {},
    "source": [
     "## Loops and Logic\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee4c6fb2",
+   "id": "212b01b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab46b4b",
+   "id": "278866e5",
    "metadata": {},
    "source": [
     "## Functions and Objects\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b08ef88e",
+   "id": "db33e14c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02732682",
+   "id": "bdfefd16",
    "metadata": {},
    "source": [
     "### Libraries: numpy (numeric python)\n",
@@ -267,11 +267,11 @@
     "$$\n",
     "X = \\left[\n",
     "\\begin{array}{}\n",
-    "x_{1,1} & x_{1,2} & x_{1,3} & ... & x_{1,N} \\\\ \n",
-    "x_{2,1} & x_{2,2} & x_{2,3} & ... & x_{2,N} \\\\ \n",
-    "x_{3,1} & x_{3,2} & x_{3,3} & ... & x_{3,N} \\\\ \n",
-    "... & ...  & ...  & ... & ...  \\\\ \n",
-    "x_{M,1} & x_{M,2} & x_{M,3} & ... & x_{M,N}\n",
+    "x_{1,1} & x_{1,2} & x_{1,3} & \\dots & x_{1,N} \\\\ \n",
+    "x_{2,1} & x_{2,2} & x_{2,3} & \\dots & x_{2,N} \\\\ \n",
+    "x_{3,1} & x_{3,2} & x_{3,3} & \\dots & x_{3,N} \\\\ \n",
+    "\\vdots & \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\ \n",
+    "x_{M,1} & x_{M,2} & x_{M,3} & \\dots & x_{M,N}\n",
     "\\end{array}\n",
     "\\right]\n",
     "$$"
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005f746e",
+   "id": "d7278599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3373d7",
+   "id": "2786f1d0",
    "metadata": {},
    "source": [
     "#### Images\n",
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa70bd11",
+   "id": "84efdd0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7750d4b4",
+   "id": "4e41727d",
    "metadata": {},
    "source": [
     "## Putting it together\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055df866",
+   "id": "962557b8",
    "metadata": {},
    "outputs": [],
    "source": []
