--- a/1-Regression Basics.ipynb
+++ b/1-Regression Basics.ipynb
@@ -200,7 +200,23 @@
    "cell_type": "markdown",
    "id": "4a3c3125",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Minimisation Algorithms\n",
+    "Instead of performing a grid search there are numerous algorithms that can find the minima of a function. These algorithms have varying performance depending on the function we are trying to minimise.\n",
+    "\n",
+    "Run the below cell to observe the Nelder-Mead method, the plot shows the path through A and B the optimiser takes, and the SSE value for each iteration.\n",
+    "\n",
+    "Find and change the algorithm type to each of the following:\n",
+    "1. \"Nelder-Mead\"\n",
+    "2. \"Powell\"\n",
+    "3. \"trust-constr\" (Trust region constrained method)\n",
+    "4. \"L-BFGS-B\" (Broyden Fletcher Goldfarb Shanno Method, L for limited memory, B for bounds)\n",
+    "\n",
+    "Observe the path to 0 for each.\n",
+    "\n",
+    "Reference:\n",
+    "https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html"
+   ]
   },
   {
    "cell_type": "code",
@@ -247,7 +263,7 @@
     "plt.ylabel(\"B\")\n",
     "plt.show()\n",
     "\n",
-    "plt.plot(range(len(SSE_steps)),SSE_steps)\n",
+    "plt.plot(SSE_steps)\n",
     "plt.xlabel(\"step\")\n",
     "plt.ylabel(\"SSE\")\n",
     "plt.show()\n"
@@ -280,7 +296,7 @@
     "\n",
     "As you can see by rerunning the above cells, the minimsed values of $A$ & $B$ will change based on the random noise introduced, even if the true values set at the top remain the same.\n",
     "\n",
-    "Write some code int he cell below to calculate $\\hat{A}$ and $\\hat{B}$\n",
+    "Write some code in the cell below to calculate $\\hat{A}$ and $\\hat{B}$\n",
     "\n",
     "Reference:\n",
     "1. https://statproofbook.github.io/P/slr-ols.html\n"
@@ -293,16 +309,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_mean = np.mean(xs)\n",
-    "y_mean = np.mean(ys)\n",
-    "delta_x = xs-x_mean\n",
-    "delta_y = ys-y_mean\n",
+    "'''\n",
+    "    Calculation of A and B via manual method.\n",
+    "'''\n",
     "\n",
-    "SXY = np.sum(delta_x * delta_y)\n",
-    "SXX = np.sum(delta_x * delta_x)\n",
-    "B = SXY/SXX\n",
-    "A = y_mean  - B *x_mean \n",
-    "\n",
+    "# TODO\n",
     "\n",
     "'''\n",
     "Plot graph of values - expect A and B to be calculated above.\n",
@@ -338,13 +349,132 @@
     "X = xs\n",
     "X = sm.add_constant(X)\n",
     "result = sm.OLS(ys,X).fit()\n",
-    "print(result.summary())\n"
+    "print(result.summary())\n",
+    "\n",
+    "plt.scatter(xs,ys, label=\"data\")\n",
+    "# plot x,y with underlying trend\n",
+    "plt.scatter(xs,ys, label=\"data\")\n",
+    "plt.plot(xs,poly(xs,B), color=\"black\", linestyle=\"--\", label=\"underlying\")\n",
+    "plt.plot(xs,poly(xs,result.params), color=\"red\", linestyle=\"-\", label=\"Fit\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01224d3f",
+   "metadata": {},
+   "source": [
+    "## Extension to Polynomials\n",
+    "\n",
+    "Quadratic Equations should be familiar at GCSE, these are equations in which the x value is squared.\n",
+    "$$ y = B_0 + B_1 \\cdot x + B_2 \\cdot x^2 $$\n",
+    "\n",
+    "This can be extended indefinitly with higher powers as:\n",
+    "$$ y = B_0 + B_1 \\cdot x + B_2 \\cdot x^2 + B_3 \\cdot x^3 + \\space ... \\space + B_n \\cdot x^n $$\n",
+    "\n",
+    "This is known as a polynomial equation. Quadratic equations are known as second order polynomials as the highest power is 2.\n",
+    "\n",
+    "In the below follow how the function poly() works, and then increase B to simulate higher order polynomials."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f945ea69",
+   "id": "065f5cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "'''\n",
+    "    Polynomial equation.\n",
+    "'''\n",
+    "def poly(x, B):\n",
+    "    y = 0\n",
+    "    for i in range(len(B)):\n",
+    "        y = y + (B[i] * (x**i))\n",
+    "    return y\n",
+    "'''\n",
+    "    The below prints the values\n",
+    "'''\n",
+    "\n",
+    "# Real values for equations.\n",
+    "B = [5, 4 , -2]\n",
+    "\n",
+    "# amount of noise to add\n",
+    "error_sigma = 30\n",
+    "\n",
+    "# number of data points\n",
+    "N = 100\n",
+    "# range of x values to use.\n",
+    "x_start = -9\n",
+    "x_stop = 9\n",
+    "\n",
+    "# setup xs and ys and a noise parameter\n",
+    "noise = np.random.normal(0,error_sigma,N)\n",
+    "xs = np.linspace(x_start,x_stop,N)\n",
+    "ys = poly(xs, B) + noise\n",
+    "\n",
+    "# plot x,y with underlying trend\n",
+    "plt.scatter(xs,ys, label=\"data\")\n",
+    "plt.plot(xs,poly(xs,B), color=\"black\", linestyle=\"--\", label=\"underlying\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "601e1a86",
+   "metadata": {},
+   "source": [
+    "OLS regerssion can also be applied to polynomials, however we need to change the input array to the statsmodel to use an array \n",
+    "\n",
+    "$$ X = \\left[\n",
+    "\\begin{array}{}\n",
+    "0 & x_1 & x_1^2 & x_1^3 & \\dots & x_1^n \\\\\n",
+    "0 & x_2 & x_2^2 & x_2^3 & \\dots & x_2^n \\\\\n",
+    "\\vdots &\\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "0 & x_m & x_1^m & x_m^3 & \\dots & x_m^n \n",
+    "\\end{array}{}\n",
+    "\\right]$$\n",
+    "\n",
+    "We can use a library to do this transformation for us as below, and then use the same methods as before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b37d9b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm \n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "polynomial_features= PolynomialFeatures(degree=len(B))\n",
+    "X = polynomial_features.fit_transform(xs.reshape(-1,1))\n",
+    "print(X.shape)\n",
+    "result = sm.OLS(ys,X).fit()\n",
+    "print(result.summary())\n",
+    "\n",
+    "# plot x,y with underlying trend\n",
+    "plt.scatter(xs,ys, label=\"data\")\n",
+    "plt.plot(xs,poly(xs,B), color=\"black\", linestyle=\"--\", label=\"underlying\")\n",
+    "plt.plot(xs,poly(xs,result.params), color=\"red\", linestyle=\"-\", label=\"Fit\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "299e9ba2",
    "metadata": {},
    "outputs": [],
    "source": []
