--- a/3-Decision_Trees.ipynb
+++ b/3-Decision_Trees.ipynb
@@ -5,7 +5,12 @@
    "id": "0f01c187-6b2b-4fd1-9436-6ea92556b84f",
    "metadata": {},
    "source": [
-    "# HSST B10m Decision Trees\n"
+    "# Decision Trees\n",
+    "Decision trees are classifiers that parition space by forming a series of conditions. e.g. value is greater than X, class A otherwise Class B etc. etc.\n",
+    "\n",
+    "To test this process we create data that is an overlapping spiral using a paramatic equation. The formation isn't important but we define parameters for number of arcs, noise and gap between spiral arms, which we use to see how the classifier behaves.\n",
+    "\n",
+    "You can change these values and view the spiral output."
    ]
   },
   {
@@ -47,17 +52,18 @@
    "outputs": [],
    "source": [
     "# generate spiral data (see https://gist.github.com/45deg/e731d9e7f478de134def5668324c44c5)\n",
-    "noise = 1.0\n",
-    "N = 200\n",
-    "split = 0.25\n",
+    "noise = 1.0  #  Size of the noise added.\n",
+    "N = 200      #  number of samples\n",
+    "split = 0.25 #  test train split i.e. 0.25 = 1/4 of the data used for testing.\n",
+    "gap = 2      #  gap between spiral arms\n",
+    "arcs = 1.0   #  number of rotations for sprial\n",
+    "theta = np.sqrt(np.random.rand(N))*arcs*2*pi # np.linspace(0,2*pi,100)\n",
     "\n",
-    "theta = np.sqrt(np.random.rand(N))*2*pi # np.linspace(0,2*pi,100)\n",
-    "\n",
-    "r_a = 2*theta + pi\n",
+    "r_a = gap*theta + pi\n",
     "data_a = np.array([np.cos(theta)*r_a, np.sin(theta)*r_a]).T\n",
     "x_a = data_a + noise*np.random.randn(N,2)\n",
     "\n",
-    "r_b = -2*theta - pi\n",
+    "r_b = -gap*theta - pi\n",
     "data_b = np.array([np.cos(theta)*r_b, np.sin(theta)*r_b]).T\n",
     "x_b = data_b + noise*np.random.randn(N,2)\n",
     "\n",
@@ -83,6 +89,13 @@
    "metadata": {},
    "source": [
     "## Basic Decision Tree\n",
+    "This creates a Decision Tree Classifier, which will be visualised as a set of conditional branches.\n",
+    "We also see a ROC curve (see lectures) which allows us to see how well it is doing.\n",
+    "\n",
+    "The ROC curve is summarised with the Area Under the Curve (AUC), the closer this is to 1.0 the better the classfication.\n",
+    "\n",
+    "We additionally perform a 10 fold Cross Validation to assess how well the classifier will work on new data.\n",
+    "\n",
     "Experiment with changing the maximum depth of the tree, how does this effect the AUC.\n",
     "Does the average AUC predicted by cross validation agree with the value from the test data?"
    ]
@@ -122,7 +135,9 @@
    "metadata": {},
    "source": [
     "### Decision boundary plot\n",
-    "This is a helper that shows the decision boundaries for the classifier."
+    "This is a helper that shows the decision boundaries for the classifier, which we apply to the above tree.\n",
+    "\n",
+    "How many parts does the tree have, do they all join up?"
    ]
   },
   {
@@ -162,7 +177,13 @@
    "id": "12cba07a-8331-4ddc-8ad1-5ad44ab26819",
    "metadata": {},
    "source": [
-    "## Bagging - Random forest"
+    "## Bagging - Random forest\n",
+    "\n",
+    "Decision trees are prone to overfitting, as they keep separating data over and over again.\n",
+    "To Avoid this we can create lots of decision trees and then get a consensus result from them all.\n",
+    "This is known as a Random Forest.\n",
+    "\n",
+    "This example creates a random forest from the data, we have some hyperparameters 9such as number of estimators and maximum depth, we perform a small randomised search to pick these values using the data and a 5-fold Cross Validation.\n"
    ]
   },
   {
@@ -209,7 +230,13 @@
    "id": "2b956a11-d927-4954-9dbe-178ece88fe66",
    "metadata": {},
    "source": [
-    "## Boosting"
+    "## Boosting\n",
+    "\n",
+    "Boosting creates a sequence of classifiers with a shallow decision tree (we set max_depth 4 to start with).\n",
+    "The points that aren't classified by this tree are then weighted and another tree is created to better classify these.\n",
+    "Again the series of trees are used to find the final result.\n",
+    "\n",
+    "_Note_: The spiral dataset does not benefit as much from this approach.\n"
    ]
   },
   {
@@ -242,9 +269,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (2023)",
+   "display_name": "Python 3 (2025)",
    "language": "python",
-   "name": "python3-2023"
+   "name": "python3-2025"
   },
   "language_info": {
    "codemirror_mode": {
